# smithril

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cbindgen.toml  log.txt  wrapper.h
.github/workflows/: ci.yml
smithril-bitwuzla-sys/: .gitignore  Cargo.toml  build.rs  wrapper.h
smithril-client/: Cargo.toml
smithril-client/src/: main.rs
smithril-ffi/: Cargo.toml  cbindgen.toml  smithril.h
smithril-ffi/src/: lib.rs
smithril-lib/: Cargo.toml
smithril-lib/src/: bitwuzla.rs  dummy.rs  generalized.rs  lib.rs  solver.rs  term.rs  utils.rs  z3.rs
smithril-runner/: Cargo.toml
smithril-runner/src/: main.rs
smithril-server/: Cargo.toml
smithril-server/src/: main.rs
smithril-z3-sys/: Cargo.toml  build.rs
smitril-bitwuzla-sys/: .gitignore  Cargo.toml  wrapper.h
smitril-lib/: Cargo.toml
smitril-lib/src/: bitwuzla.rs  generalized.rs  lib.rs
src/: bitwuzla.rs  capi.rs  dummy.rs  generalized.rs  lib.rs  main.rs  runner.rs  solver.rs  term.rs  z3.rs
src/generalized/: bitwuzla_sys.rs
