[package]
name = "smithril"
version = "0.1.0"
edition = "2021"

[dependencies]
smithril-bitwuzla-sys = { path = "smithril-bitwuzla-sys" }
smithril-z3-sys = { path = "smithril-z3-sys" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19.0"
duration-string = "0.4.0"
libc = { version = "0.2" }
crossbeam-channel = "0.5.13"

[features]
default = []
capi = []

[lib]

[build-dependencies]
cbindgen = "0.27.0"

[workspace]
members = [
  ".",
  "smithril-bitwuzla-sys",
  "smithril-z3-sys",
]
resolver = "2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
