[package]
name = "smithril-client"
version = "0.1.0"
edition = "2021"

[dependencies]
smithril-lib = { path = "../smithril-lib" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ipc-channel = "0.18.1"
tokio-util = "0.7.11"
futures = "0.3.30"

