[package]
name = "smithril-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
smithril-bitwuzla-sys = { path = "../smithril-bitwuzla-sys" }
smithril-z3-sys = { path = "../smithril-z3-sys" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ipc-channel = "0.18.1"
tokio-util = "0.7.11"
futures = "0.3.30"
once_cell = "1.19.0"
